[gd_scene load_steps=41 format=3 uid="uid://daw8eejnclfbp"]

[ext_resource type="Script" uid="uid://gm1drr080u8v" path="res://Player/Characters/Sonic/Sonic.gd" id="1_4d6lt"]
[ext_resource type="AudioStream" uid="uid://c2kxtdmr3ir27" path="res://Assets/Sfx/Player sfx/spinDashCharge.wav" id="9_u5to8"]
[ext_resource type="AudioStream" uid="uid://snixmffu2obn" path="res://Assets/Sfx/Player sfx/peelOutCharge.wav" id="10_qn0a1"]
[ext_resource type="AudioStream" uid="uid://bkw670vb6mf7r" path="res://Assets/Sfx/Player sfx/spinDashRelease.wav" id="10_x4ggo"]
[ext_resource type="AudioStream" uid="uid://bdpxk8wq8fbp6" path="res://Assets/Sfx/Player sfx/peelOutRelease.wav" id="11_cgfia"]
[ext_resource type="AudioStream" uid="uid://bky7f0wchu6aa" path="res://Assets/Sfx/Player sfx/jump.wav" id="11_o1dpk"]
[ext_resource type="Script" uid="uid://p1cutiwn0qlm" path="res://Player/Combat/light_attack.gd" id="11_u5to8"]
[ext_resource type="Texture2D" uid="uid://dq5b16vyr84rm" path="res://Assets/Player/Sonic sprites/Sonic Spritest.png" id="12_5wa8t"]
[ext_resource type="Texture2D" uid="uid://dubutvstm8bvm" path="res://Assets/Player/Sonic sprites/Sonic Spritest_n.png" id="13_cgfia"]
[ext_resource type="Script" uid="uid://ttimgli2l8hu" path="res://Player/Combat/heavy_attack.gd" id="13_o1dpk"]
[ext_resource type="Texture2D" uid="uid://duiapf8piqm5n" path="res://Assets/Player/Sonic sprites/Sonic Spritest_s.png" id="14_4d6lt"]
[ext_resource type="Script" uid="uid://b6f64xph15pli" path="res://Player/Combat/Player_hit_box.gd" id="14_vewtk"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r3kul"]
radius = 9.21423
height = 26.0006

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o1dpk"]
radius = 11.999
height = 41.9966

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vewtk"]
radius = 12.0288
height = 46.6832

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a3eu5"]
radius = 10.8107
height = 42.7803

[sub_resource type="CanvasTexture" id="CanvasTexture_4d6lt"]
diffuse_texture = ExtResource("12_5wa8t")
normal_texture = ExtResource("13_cgfia")
specular_texture = ExtResource("14_4d6lt")
texture_filter = 1
texture_repeat = 2

[sub_resource type="Animation" id="Animation_4d6lt"]
resource_name = "Air_Boost"
length = 0.214293
loop_mode = 1
step = 0.0714286
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0714286, 0.142857),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(5, 4), Vector2i(6, 4), Vector2i(7, 4)]
}

[sub_resource type="Animation" id="Animation_eb4x5"]
resource_name = "Bounce_Down"
length = 0.35715
step = 0.0714286
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0712519, 0.142857, 0.214286, 0.285714),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(8, 4), Vector2i(9, 4), Vector2i(10, 4), Vector2i(1, 8), Vector2i(0, 8)]
}

[sub_resource type="Animation" id="Animation_awq8w"]
resource_name = "Bounce_Up"
length = 0.272732
step = 0.0454545
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0454545, 0.0909091, 0.136364, 0.181818, 0.227273),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(3, 5)]
}

[sub_resource type="Animation" id="Animation_jgbld"]
resource_name = "Falling"
length = 0.285729
loop_mode = 1
step = 0.142857
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(3, 4), Vector2i(4, 4)]
}

[sub_resource type="Animation" id="Animation_tvdxf"]
resource_name = "Get_Down"
length = 0.333344
step = 0.111111
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.111111, 0.222222),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(10, 6), Vector2i(0, 7), Vector2i(1, 7)]
}

[sub_resource type="Animation" id="Animation_7k3wl"]
resource_name = "Get_Up"
length = 0.333344
step = 0.111111
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.111111, 0.222222),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_k2yls"]
resource_name = "Idle"
length = 1.00001
loop_mode = 1
step = 0.111111
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.111111, 0.222222, 0.333333, 0.444444, 0.555556, 0.666667, 0.779733, 0.891642),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(4, 0), Vector2i(3, 0), Vector2i(2, 0)]
}

[sub_resource type="Animation" id="Animation_f7cri"]
resource_name = "Jump"
length = 0.500008
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(4, 3), Vector2i(5, 3), Vector2i(6, 3), Vector2i(7, 3), Vector2i(8, 3), Vector2i(9, 3)]
}

[sub_resource type="Animation" id="Animation_vwj3c"]
resource_name = "Jump_Loop"
length = 0.333342
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(10, 3), Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4)]
}

[sub_resource type="Animation" id="Animation_tjaac"]
resource_name = "Peel_Out_Charge"
length = 0.666675
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(8, 9), Vector2i(9, 9), Vector2i(10, 9), Vector2i(0, 10), Vector2i(1, 10), Vector2i(2, 10), Vector2i(3, 10), Vector2i(4, 10)]
}

[sub_resource type="Animation" id="Animation_jsfyl"]
resource_name = "Peel_Out_Release"
length = 0.333342
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(5, 10), Vector2i(6, 10), Vector2i(7, 10), Vector2i(6, 10)]
}

[sub_resource type="Animation" id="Animation_jtrv3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(8, 4)]
}

[sub_resource type="Animation" id="Animation_k8gqy"]
resource_name = "Rail"
length = 0.166675
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(4, 5), Vector2i(5, 5)]
}

[sub_resource type="Animation" id="Animation_b1crk"]
resource_name = "Run"
length = 0.666675
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2)]
}

[sub_resource type="Animation" id="Animation_j3yo5"]
resource_name = "Spindash_Charge"
length = 0.571436
loop_mode = 1
step = 0.0714286
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0714286, 0.142857, 0.214286, 0.285714, 0.357143, 0.428571, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 7), Vector2i(3, 7), Vector2i(4, 7), Vector2i(5, 7), Vector2i(6, 7), Vector2i(7, 7), Vector2i(8, 7), Vector2i(9, 7)]
}

[sub_resource type="Animation" id="Animation_pvwaj"]
resource_name = "Spindash_Charge_Wall"
length = 0.428579
loop_mode = 1
step = 0.0714286
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0714286, 0.142857, 0.214286, 0.285714, 0.357143),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 8), Vector2i(4, 8), Vector2i(5, 8), Vector2i(6, 8), Vector2i(7, 8), Vector2i(8, 8)]
}

[sub_resource type="Animation" id="Animation_3knkx"]
resource_name = "Spindash_Released"
length = 0.428579
loop_mode = 1
step = 0.0714286
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0714286, 0.142857, 0.214286, 0.285714, 0.357143),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(10, 7), Vector2i(0, 8), Vector2i(1, 8), Vector2i(2, 8), Vector2i(1, 8), Vector2i(0, 8)]
}

[sub_resource type="Animation" id="Animation_qx5ar"]
resource_name = "Spindash_Released_Wall"
length = 0.142864
loop_mode = 1
step = 0.0714286
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0714286),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(9, 8), Vector2i(10, 8)]
}

[sub_resource type="Animation" id="Animation_6faim"]
resource_name = "Stopping"
length = 0.166675
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(8, 2), Vector2i(9, 2)]
}

[sub_resource type="Animation" id="Animation_xyuxo"]
resource_name = "Turn_Around"
length = 0.333342
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(10, 2), Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_448vo"]
resource_name = "Walk"
length = 0.666675
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1), Vector2i(8, 1), Vector2i(9, 1), Vector2i(10, 1)]
}

[sub_resource type="Animation" id="Animation_8mobw"]
resource_name = "Wall_Run"
length = 0.666675
loop_mode = 1
step = 0.0833333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 9), Vector2i(1, 9), Vector2i(2, 9), Vector2i(3, 9), Vector2i(4, 9), Vector2i(5, 9), Vector2i(6, 9), Vector2i(7, 9)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_acoow"]
_data = {
&"Air_Boost": SubResource("Animation_4d6lt"),
&"Bounce_Down": SubResource("Animation_eb4x5"),
&"Bounce_Up": SubResource("Animation_awq8w"),
&"Falling": SubResource("Animation_jgbld"),
&"Get_Down": SubResource("Animation_tvdxf"),
&"Get_Up": SubResource("Animation_7k3wl"),
&"Idle": SubResource("Animation_k2yls"),
&"Jump": SubResource("Animation_f7cri"),
&"Jump_Loop": SubResource("Animation_vwj3c"),
&"Peel_Out_Charge": SubResource("Animation_tjaac"),
&"Peel_Out_Release": SubResource("Animation_jsfyl"),
&"RESET": SubResource("Animation_jtrv3"),
&"Rail": SubResource("Animation_k8gqy"),
&"Run": SubResource("Animation_b1crk"),
&"Spindash_Charge": SubResource("Animation_j3yo5"),
&"Spindash_Charge_Wall": SubResource("Animation_pvwaj"),
&"Spindash_Released": SubResource("Animation_3knkx"),
&"Spindash_Released_Wall": SubResource("Animation_qx5ar"),
&"Stopping": SubResource("Animation_6faim"),
&"Turn_Around": SubResource("Animation_xyuxo"),
&"Walk": SubResource("Animation_448vo"),
&"Wall_Run": SubResource("Animation_8mobw")
}

[node name="Player" type="CharacterBody2D"]
z_index = 1
position = Vector2(3, 7)
floor_constant_speed = true
floor_max_angle = 2.0944
floor_snap_length = 12.0
script = ExtResource("1_4d6lt")

[node name="SlopeCast" type="RayCast2D" parent="."]
position = Vector2(0.214945, -16.9986)
target_position = Vector2(26.9978, 0.341385)
hit_from_inside = true

[node name="PlayerHitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="PlayerHitBox"]
position = Vector2(0, -17)
shape = SubResource("CapsuleShape2D_r3kul")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -17)
shape = SubResource("CapsuleShape2D_r3kul")

[node name="Raycast" type="RayCast2D" parent="Collision"]
visible = false
position = Vector2(0, 11)
target_position = Vector2(-0.0505755, 9.99968)

[node name="WallCast" type="RayCast2D" parent="Collision"]
position = Vector2(6.2524, -2.92254)
enabled = false
target_position = Vector2(3.99968, 0.0505762)
hit_from_inside = true

[node name="RoofCast" type="RayCast2D" parent="Collision"]
position = Vector2(0.22759, -0.998558)
target_position = Vector2(0.32874, -25.9979)

[node name="ControlLockTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="WallFallTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.3

[node name="Combat" type="Node2D" parent="."]
position = Vector2(3, 3)

[node name="Light_Attack" type="Node2D" parent="Combat"]
script = ExtResource("11_u5to8")

[node name="Duration" type="Timer" parent="Combat/Light_Attack"]
wait_time = 0.55
one_shot = true

[node name="Cooldown" type="Timer" parent="Combat/Light_Attack"]
wait_time = 0.05
one_shot = true

[node name="ComboTimer" type="Timer" parent="Combat/Light_Attack"]
wait_time = 0.8
one_shot = true

[node name="StartupTimer" type="Timer" parent="Combat/Light_Attack"]
wait_time = 0.2
one_shot = true

[node name="Heavy_Attack" type="Node2D" parent="Combat"]
script = ExtResource("13_o1dpk")

[node name="Duration" type="Timer" parent="Combat/Heavy_Attack"]
wait_time = 0.3

[node name="Cooldown" type="Timer" parent="Combat/Heavy_Attack"]

[node name="DashTimer" type="Timer" parent="Combat"]
wait_time = 0.3

[node name="DashRecharge" type="Timer" parent="Combat"]

[node name="AttackHitBox" type="Area2D" parent="Combat"]
position = Vector2(-4.76837e-07, 0)
script = ExtResource("14_vewtk")

[node name="LightAttack1" type="CollisionShape2D" parent="Combat/AttackHitBox"]
position = Vector2(9.26456, -20.8466)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_o1dpk")

[node name="LightAttack2" type="CollisionShape2D" parent="Combat/AttackHitBox"]
position = Vector2(5.34075, -26.8967)
rotation = 0.897553
shape = SubResource("CapsuleShape2D_vewtk")

[node name="LightAttack3" type="CollisionShape2D" parent="Combat/AttackHitBox"]
position = Vector2(6.27744, -21.8844)
rotation = 0.962315
shape = SubResource("CapsuleShape2D_a3eu5")

[node name="Sfx" type="Node" parent="."]

[node name="SpinDashCharge" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource("9_u5to8")
volume_db = -40.0

[node name="SpinDashRelease" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource("10_x4ggo")
volume_db = -40.0

[node name="Jump" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource("11_o1dpk")
volume_db = -50.0

[node name="PeelOutCharge" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource("10_qn0a1")
volume_db = -40.0

[node name="PeelOutRelease" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource("11_cgfia")
volume_db = -40.0

[node name="Sprites" type="Node" parent="."]

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(-0.772331, -18.0112)
rotation = 0.0129566
texture = SubResource("CanvasTexture_4d6lt")
hframes = 11
vframes = 11
frame = 52

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_acoow")
}

[connection signal="body_entered" from="PlayerHitBox" to="." method="_on_player_hit_box_body_entered"]
[connection signal="timeout" from="WallFallTimer" to="." method="_on_wall_fall_timer_timeout"]
